--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -11,12 +11,11 @@ jobs:
   unit-testing:
     name: Unit Testing
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup NodeJS Version 20
+      - name: Setup NodeJS Version
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -24,12 +23,11 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run Unit Tests
+      - name: Unit Testing
         run: npm test
 
       - name: Archive Test Result
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v3
         with:
           name: Mocha-Test-Result
           path: test-results.xml
-
