--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm test
 
       - name: Archive Test Result
-        uses: actions/upload-artifact@93b7d3f7b55e7cbfbf33eae02b4fdd6922f6b44b
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: Mocha-Test-Result
           path: test-results.xml
