--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,6 +7,11 @@ on:
       - main
       - 'feature/*'
 
+env:
+  MONGO_URI: 'mongodb+srv://supercluster.d83jj.mongodb.net/superData'
+  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
+  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+
 jobs:
   unit-testing:
     name: Unit Testing
@@ -18,16 +23,16 @@ jobs:
       - name: Setup NodeJS Version
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
 
       - name: Install Dependencies
         run: npm install
 
-      - name: Unit Testing
+      - name: Run Unit Tests
         run: npm test
 
       - name: Archive Test Result
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@main  # safer than @v3 or @v3.1.3 due to CDN cache issues
         with:
           name: Mocha-Test-Result
           path: test-results.xml
