--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -8,19 +8,20 @@ on:
       - 'feature/*'
 
 env:
-  MONGO_URI: 'mongodb+srv://supercluster.d83jj.mongodb.net/superData'
-  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
-  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+  # Inject MongoDB connection environment variables
+  MONGO_URI: 'mongodb+srv://${{ vars.MONGO_USERNAME }}:${{ secrets.MONGO_PASSWORD }}@supercluster.d83jj.mongodb.net/superData?retryWrites=true&w=majority'
+  NODE_ENV: production
 
 jobs:
   unit-testing:
     name: Unit Testing
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup NodeJS Version
+      - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -31,8 +32,8 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
-      - name: Archive Test Result
-        uses: actions/upload-artifact@main  # safer than @v3 or @v3.1.3 due to CDN cache issues
+      - name: Archive Test Results
+        uses: actions/upload-artifact@v3
         with:
           name: Mocha-Test-Result
           path: test-results.xml
