--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm test
 
       - name: Archive Test Results
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@main
         with:
           name: Mocha-Test-Result
           path: test-results.xml
