ci: switch to local MongoDB service for CI testing

--- a/.github/workflows/solar-system_adding_matrix.yml
+++ b/.github/workflows/solar-system_adding_matrix.yml
@@ -1,4 +1,4 @@
-name: Solar System Workflow - Local Mongo
+name: Solar System Workflow - Matrix Testing
 
 on:
   workflow_dispatch:
@@ -8,20 +8,25 @@ on:
       - 'feature/*'
 
 env:
-  MONGO_URI: 'mongodb://localhost:27017/solar-system'
+  MONGO_URI: 'mongodb://127.0.0.1:27017/solar-system'
   NODE_ENV: test
 
 jobs:
   unit-testing:
-    name: Local MongoDB Unit Testing
+    name: Node.js ${{ matrix.node }} Test
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node: [16, 18, 20]  # 👈 You can test across Node.js versions
+
     services:
-      mongo:
-        image: mongo:5.0
+      mongodb:
+        image: mongo:6.0
         ports:
           - 27017:27017
         options: >-
-          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })'"
+          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -30,19 +35,22 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ matrix.node }}
 
-      - name: Install Dependencies
+      - name: Install Dependencies (including dev)
         run: npm install --include=dev
+
+      - name: Seed MongoDB
+        run: node seed.js
 
       - name: Run Unit Tests
         run: npm test
 
       - name: Archive Test Results
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v3
         with:
-          name: Mocha-Test-Result
+          name: Mocha-Test-Result-Node${{ matrix.node }}
           path: test-results.xml
