--- a/.github/workflows/solar-system_adding_matrix.yml
+++ b/.github/workflows/solar-system_adding_matrix.yml
@@ -50,7 +50,7 @@ jobs:
         run: npm test
 
       - name: Archive Test Results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@main
         with:
           name: Mocha-Test-Result-Node${{ matrix.node }}
           path: test-results.xml
