ci: add matrix test strategy for Node.js versions

--- a/.github/workflows/solar-system_adding_matrix.yml
+++ b/.github/workflows/solar-system_adding_matrix.yml
@@ -40,8 +40,8 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install Dependencies (including dev)
-        run: npm install --include=dev
+      - name: Install all Dependencies
+        run: npm install
 
       - name: Wait for MongoDB to be healthy
         run: |
