--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Solar System",
   "version": "6.7.6",
+  "description": "An API to explore planetary data in our solar system.",
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
   "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
   "license": "MIT",
@@ -8,23 +9,26 @@
     "start": "node app.js",
     "seed": "node seed.js",
     "test": "mocha app-test.js --timeout 10000 --reporter mocha-junit-reporter --exit",
-    "coverage": "nyc --reporter cobertura --reporter lcov --reporter text --reporter json-summary mocha app-test.js --timeout 10000 --exit"
+    "coverage": "nyc --reporter=cobertura --reporter=lcov --reporter=text --reporter=json-summary mocha app-test.js --timeout 10000 --exit"
   },
   "nyc": {
     "check-coverage": true,
-    "lines": 90
+    "lines": 90,
+    "report-dir": "./coverage",
+    "include": ["*.js"],
+    "exclude": ["seed.js"]
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "mocha-junit-reporter": "^2.2.1",
     "mongoose": "5.13.20",
-    "nyc": "^15.1.0"
+    "mocha-junit-reporter": "^2.2.1"
   },
   "devDependencies": {
-    "chai": "*",
-    "chai-http": "*",
-    "mocha": "*"
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0"
   }
 }
