ci: add code coverage

--- a/.github/workflows/solar-system_adding_code_coverage_job.yml
+++ b/.github/workflows/solar-system_adding_code_coverage_job.yml
@@ -67,6 +67,17 @@ jobs:
     name: Node.js Code Coverage
     runs-on: ubuntu-latest
 
+    services:
+      mongodb:
+        image: mongo:6.0
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -78,6 +89,12 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+
+      - name: Wait for MongoDB
+        run: sleep 10
+
+      - name: Seed MongoDB
+        run: node seed.js
 
       - name: Run Code Coverage
         run: npm run coverage
