--- a/.github/workflows/solar-system_adding_docker_build-test.yml
+++ b/.github/workflows/solar-system_adding_docker_build-test.yml
@@ -1,4 +1,4 @@
-name: Solar System Workflow - Unit Test & Coverage_docker_build-test
+name: Solar System Workflow - Unit Test & Coverage
 
 on:
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [16, 18, 20]
+        node: [18, 20]
 
     services:
       mongodb:
@@ -67,7 +67,7 @@ jobs:
 
       - name: Archive Test Results
         if: always()
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v3
         with:
           name: Mocha-Test-Result-Node${{ matrix.node }}
           path: test-results.xml
@@ -118,7 +118,7 @@ jobs:
         run: npm run coverage
 
       - name: Archive Code Coverage Result
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v3
         with:
           name: Code-Coverage-Result
           path: coverage
@@ -137,4 +137,27 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Docker Build For Testing
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: false
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+
+      - name: Docker Image Testing
+        run: |
+          docker images
+          docker run --name solar-system-app -d \
+            -p 3000:3000 \
+            -e MONGO_URI=$MONGO_URI \
+            -e MONGO_USERNAME=$MONGO_USERNAME \
+            -e MONGO_PASSWORD=$MONGO_PASSWORD \
+            ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+
+          export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+          echo $IP
+
+          echo Testing Image URL using wget
+          wget -q -O - 127.0.0.1:3000/live | grep live
 
