--- a/.github/workflows/solar-system_adding_docker_build-test.yml
+++ b/.github/workflows/solar-system_adding_docker_build-test.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Archive Test Results
         if: always()
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@main
         with:
           name: Mocha-Test-Result-Node${{ matrix.node }}
           path: test-results.xml
@@ -118,7 +118,7 @@ jobs:
         run: npm run coverage
 
       - name: Archive Code Coverage Result
-        uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@main
         with:
           name: Code-Coverage-Result
           path: coverage
