--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Solar System",
+  "name": "@nolet7/Solar System",
   "version": "6.7.6",
   "description": "An API to explore planetary data in our solar system.",
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
